@@ -1,3 +1,7 @@
+2024-12-19 Franz Holzinger <franz@ttproducts.de>
+    * remove unused class Request/Parameters
+    * add class SessionHandler/SessionHandler to store session data.
+
 2024-03-28 Franz Holzinger <franz@ttproducts.de>
     * remove the old API
 
